$Id$

2024-09-23  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 11 23H2 and 24H2 build numbers.

	drivedb.h:
	- Toshiba MG09ACA... Enterprise Capacity HDD: 10-14GB,
	  Lenovo OEM (#1876).
	- Toshiba MG10ADA... Enterprise Capacity HDD
	- Seagate Barracuda 7200.12: Suppress warning if HP firmware (#1847).
	- Seagate Barracuda 7200.12: Attributes 188 and 240 (#1855).
	- Seagate BarraCuda 3.5 (CMR): Reformat regexp.
	- Seagate Constellation ES.2: IBM OEM (#1431).

2024-05-08  Christian Franke  <franke@computer.org>

	smartctl.cpp, smartd.cpp: Fix segfault on missing option argument (#1830).

	getopt*() from musl libc sets 'optind = argc + 1' if the argument of
	a short option is missing.

2024-04-26  Christian Franke  <franke@computer.org>

	os_win32/vc1[67]/*: Set svn:eol-style=CRLF, MSVC does not preserve LF.

2024-04-06  Christian Franke  <franke@computer.org>

	drivedb.h: move Toshiba and WDC "Helium" attributes to "DEFAULT" entry.
	Drop maintenance of 6.0-6.4 branches due to missing "DEFAULT" entry.

	drivedb.h:
	- Western Digital Ultrastar (He10/12): move WD40EZAZ to Blue (SMR).
	- Western Digital Blue (CMR): rename, add *EAZZ (#1576, GH issue/192) and other.
	- Western Digital Blue (SMR): 3TB, *BX variant.
	- Western Digital Red (CMR): rename, add 3TB, move *EF[ABFG]X* to Red Plus.
	- Western Digital Red Plus (#1675, #1704, GH pull/79).
	- Western Digital Red Pro: 12TB (#1676), 14TB, 20TB and attribute 90 (#1731).

2024-04-02 Gabriele Pohl  <contact@dipohl.de>

	drivedb.h:
	- Western Digital Ultrastar (He10/12): WDC WD40EDAZ-11SLVB0 (#1411)
	- Western Digital Red Pro: WDC WD161KFGX-68AFPN0, 
	  WDC WD181KFGX-68AFPN0 (#1611, GH issues/173 and 
	  reported by Ben Lovett via Smartmontools-database 2023-05-21)
	- Toshiba 2.5\" HDD MQ01ABF...: TOSHIBA MQ01ABF032 ((based on patch from #1804)
	- Toshiba N300/MN NAS HDD: TOSHIBA HDWG51J and rest from product sheet
	  reported by Andreas Bofjall via Smartmontools-database 2024-02-29
